# financial_simulator

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  Trunk.toml  financial_simulator-11adbe80818f1c66.js  financial_simulator-11adbe80818f1c66_bg.wasm  financial_simulator-1a77a09a06d762a8.js  financial_simulator-1a77a09a06d762a8_bg.wasm  financial_simulator-284ac748fd859f.js  financial_simulator-284ac748fd859f_bg.wasm  financial_simulator-4c5c0e8f99b35143.js  financial_simulator-4c5c0e8f99b35143_bg.wasm  financial_simulator-6e68ff25c189975f_bg.wasm  financial_simulator-beeab30a1219fa85_bg.wasm  index.html  style-9622635c857903ef.css  style-9e51f451f5fbc2d4.css  style.css
.github/workflows/: deploy.yml
src/: main.rs
