[package]
name = "financial_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotly = "0.14"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
js-sys = "0.3"
console_log = "1.0"
console_error_panic_hook = "0.1"
log = "0.4"
